--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,56 @@
 {
+  "files.associations": {
+    "vector": "cpp",
+    "xstring": "cpp",
+    "ostream": "cpp",
+    "iostream": "cpp",
+    "tuple": "cpp",
+    "xtree": "cpp",
+    "cmath": "cpp",
+    "set": "cpp",
+    "map": "cpp",
+    "xutility": "cpp",
+    "utility": "cpp",
+    "algorithm": "cpp",
+    "initializer_list": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "exception": "cpp",
+    "fstream": "cpp",
+    "ios": "cpp",
+    "iosfwd": "cpp",
+    "istream": "cpp",
+    "iterator": "cpp",
+    "limits": "cpp",
+    "memory": "cpp",
+    "new": "cpp",
+    "numeric": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "string": "cpp",
+    "system_error": "cpp",
+    "type_traits": "cpp",
+    "typeinfo": "cpp",
+    "xfacet": "cpp",
+    "xiosbase": "cpp",
+    "xlocale": "cpp",
+    "xlocinfo": "cpp",
+    "xlocnum": "cpp",
+    "xmemory": "cpp",
+    "xstddef": "cpp",
+    "xtr1common": "cpp",
+    "saidbutnotheard": "cpp"
+  },
   "C_Cpp.errorSquiggles": "disabled"
 }
