--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,8 @@
     "xmemory": "cpp",
     "xstddef": "cpp",
     "xtr1common": "cpp",
-    "saidbutnotheard": "cpp"
+    "saidbutnotheard": "cpp",
+    "deque": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
